# autoconf_example

./: AUTHORS  Makefile.am  Makefile.in  NEWS  README  buildall  config.h.in  configure  configure.ac  skey-config
include/: Makefile.am  Makefile.in  skey.h
lib/: Makefile.am  Makefile.in  md4.c  put.c  skeylogin.c  skeysubr.c
man/: Makefile.am  Makefile.in  key.1
skey/: Makefile.am  Makefile.in  skey.c  skeyinit.c  skeysh.c  skeytest.sh
